test: :white_check_mark: test category service