@@ -1,23 +1,19 @@
 package com.example.hulk_store_backend.service.Implementation;
 
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.*;
-
 import com.example.hulk_store_backend.model.Category;
 import com.example.hulk_store_backend.repository.CategoryRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Optional;
 import java.util.Collections;
-import java.util.List;
+import java.util.Optional;
 
-@ExtendWith(MockitoExtension.class)
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
+
 class CategoryServiceTest {
 
     @Mock
@@ -26,50 +22,32 @@ class CategoryServiceTest {
     @InjectMocks
     private CategoryService categoryService;
 
+    private Category category;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        category = new Category();
+        category.setId(1L);
+        category.setName("Test");
+        category.setDescription("Test");
     }
 
     @Test
-    void allReturnsListOfCategories() {
-        List<Category> categories = List.of(new Category(), new Category());
-        when(categoryRepository.findAll()).thenReturn(categories);
-
-        List<Category> result = categoryService.all();
-
-        assertEquals(2, result.size());
-        verify(categoryRepository, times(1)).findAll();
+    void all() {
+        when(categoryRepository.findAll()).thenReturn(Collections.singletonList(category));
+        assertNotNull(categoryService.all());
     }
 
     @Test
-    void allReturnsEmptyListWhenNoCategories() {
-        when(categoryRepository.findAll()).thenReturn(Collections.emptyList());
-
-        List<Category> result = categoryService.all();
-
-        assertTrue(result.isEmpty());
-        verify(categoryRepository, times(1)).findAll();
+    void findById() {
+        when(categoryRepository.findById(1L)).thenReturn(Optional.ofNullable(category));
+        assertNotNull(categoryService.findById(1L));
     }
 
     @Test
-    void findByIdReturnsCategoryWhenFound() {
-        Category category = new Category();
-        when(categoryRepository.findById(1L)).thenReturn(Optional.of(category));
-
-        Category result = categoryService.findById(1L);
-
-        assertNotNull(result);
-        verify(categoryRepository, times(1)).findById(1L);
-    }
-
-    @Test
-    void findByIdReturnsNullWhenNotFound() {
+    void findByIdNull() {
         when(categoryRepository.findById(1L)).thenReturn(Optional.empty());
-
-        Category result = categoryService.findById(1L);
-
-        assertNull(result);
-        verify(categoryRepository, times(1)).findById(1L);
+        assertNull(categoryService.findById(1L));
     }
 }
